Make patches for tests