@@ -32,12 +32,9 @@ import java.io.PrintStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+
 import jenkins.plugins.git.AbstractGitSCMSource;
 import jenkins.scm.api.SCMRevisionAction;
 import org.apache.commons.io.IOUtils;
@@ -57,6 +54,8 @@ import org.mockserver.client.MockServerClient;
 import org.mockserver.junit.MockServerRule;
 import org.mockserver.model.HttpRequest;
 import org.mockserver.model.HttpResponse;
+import org.mockserver.model.MediaType;
+import org.mockserver.model.StringBody;
 import org.mockserver.verify.VerificationTimes;
 
 /**
@@ -73,6 +72,8 @@ public class GitLabCommitStatusPublisherTest {
 
     private MockServerClient mockServerClient;
     private BuildListener listener;
+
+    private final String apiLevel = "V4";
 
     @BeforeClass
     public static void setupClass() throws IOException {
@@ -98,7 +99,7 @@ public class GitLabCommitStatusPublisherTest {
     @Test
     public void running_v4() throws UnsupportedEncodingException {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.RUNNING);
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.RUNNING);
 
         prebuildAndVerify(build, listener, requests);
     }
@@ -106,7 +107,7 @@ public class GitLabCommitStatusPublisherTest {
     @Test
     public void runningWithLibrary() throws UnsupportedEncodingException {
         AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, null, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.RUNNING);
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.RUNNING);
 
         prebuildAndVerify(build, listener, requests);
     }
@@ -116,9 +117,9 @@ public class GitLabCommitStatusPublisherTest {
         AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.test.git");
         HttpRequest[] requests = new HttpRequest[] {
             prepareGetProjectResponse("test/project.test"),
-            prepareExistsCommitWithSuccessResponse("V4", String.valueOf(PROJECT_ID)),
+            prepareExistsCommitWithSuccessResponse(apiLevel, String.valueOf(PROJECT_ID)),
             prepareUpdateCommitStatusWithSuccessResponse(
-                    "V4", String.valueOf(PROJECT_ID), build, CommitBuildState.RUNNING)
+                apiLevel, String.valueOf(PROJECT_ID), build, CommitBuildState.RUNNING)
         };
 
         prebuildAndVerify(build, listener, requests);
@@ -126,84 +127,84 @@ public class GitLabCommitStatusPublisherTest {
 
     @Test
     public void canceled_v4() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.ABORTED, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.CANCELED);
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, Result.ABORTED, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.CANCELED);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void canceledWithLibrary() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.ABORTED, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.CANCELED);
+        AbstractBuild<?, ?> build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.ABORTED, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.CANCELED);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void success_v4() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.SUCCESS, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.SUCCESS);
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, Result.SUCCESS, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.SUCCESS);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void successWithLibrary() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.SUCCESS, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.SUCCESS);
+        AbstractBuild<?, ?> build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.SUCCESS, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.SUCCESS);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void failed_v4() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.FAILURE, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.FAILED);
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, Result.FAILURE, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.FAILED);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void failedWithLibrary() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.FAILURE, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.FAILED);
+        AbstractBuild<?, ?> build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.FAILURE, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.FAILED);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void unstable() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.FAILED);
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.FAILED);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void unstableWithLibrary() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.FAILED);
+        AbstractBuild<?, ?> build = mockBuildWithLibrary(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.FAILED);
 
         performAndVerify(build, false, requests);
     }
 
     @Test
     public void unstableAsSuccess() throws IOException, InterruptedException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
-        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests("V4", build, CommitBuildState.SUCCESS);
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, Result.UNSTABLE, "test/project.git");
+        HttpRequest[] requests = prepareCheckCommitAndUpdateStatusRequests(apiLevel, build, CommitBuildState.SUCCESS);
 
         performAndVerify(build, true, requests);
     }
 
     @Test
     public void running_multipleRepos() throws UnsupportedEncodingException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project-1.git", "test/project-2.git");
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project-1.git", "test/project-2.git");
         HttpRequest[] requests = new HttpRequest[] {
-            prepareExistsCommitWithSuccessResponse("V4", "test/project-1"),
-            prepareUpdateCommitStatusWithSuccessResponse("V4", "test/project-1", build, CommitBuildState.RUNNING),
-            prepareExistsCommitWithSuccessResponse("V4", "test/project-2"),
-            prepareUpdateCommitStatusWithSuccessResponse("V4", "test/project-2", build, CommitBuildState.RUNNING)
+            prepareExistsCommitWithSuccessResponse(apiLevel, "test/project-1"),
+            prepareUpdateCommitStatusWithSuccessResponse(apiLevel, "test/project-1", build, CommitBuildState.RUNNING),
+            prepareExistsCommitWithSuccessResponse(apiLevel, "test/project-2"),
+            prepareUpdateCommitStatusWithSuccessResponse(apiLevel, "test/project-2", build, CommitBuildState.RUNNING)
         };
 
         prebuildAndVerify(build, listener, requests);
@@ -211,9 +212,9 @@ public class GitLabCommitStatusPublisherTest {
 
     @Test
     public void running_commitNotExists() throws UnsupportedEncodingException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
         HttpRequest updateCommitStatus =
-                prepareUpdateCommitStatusWithSuccessResponse("V4", "test/project", build, CommitBuildState.RUNNING);
+                prepareUpdateCommitStatusWithSuccessResponse(apiLevel, "test/project", build, CommitBuildState.RUNNING);
 
         new GitLabCommitStatusPublisher("jenkins", false).prebuild(build, listener);
         mockServerClient.verify(updateCommitStatus, VerificationTimes.exactly(0));
@@ -221,15 +222,15 @@ public class GitLabCommitStatusPublisherTest {
 
     @Test
     public void running_failToUpdate() throws UnsupportedEncodingException {
-        AbstractBuild build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
+        AbstractBuild<?, ?> build = mockBuild(GITLAB_CONNECTION_V4, null, "test/project.git");
         BuildListener buildListener = mock(BuildListener.class);
 
         ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
         when(buildListener.getLogger()).thenReturn(new PrintStream(outputStream));
 
-        prepareExistsCommitWithSuccessResponse("V4", "test/project");
+        prepareExistsCommitWithSuccessResponse(apiLevel, "test/project");
         HttpRequest updateCommitStatus =
-                prepareUpdateCommitStatus("V4", "test/project", build, CommitBuildState.RUNNING);
+                prepareUpdateCommitStatus(apiLevel, "test/project", build, CommitBuildState.RUNNING);
         mockServerClient.when(updateCommitStatus).respond(response().withStatusCode(403));
 
         prebuildAndVerify(build, buildListener, updateCommitStatus);
@@ -239,12 +240,12 @@ public class GitLabCommitStatusPublisherTest {
                         "Failed to update Gitlab commit status for project 'test/project': HTTP 403 Forbidden"));
     }
 
-    private void prebuildAndVerify(AbstractBuild build, BuildListener listener, HttpRequest... requests) {
+    private void prebuildAndVerify(AbstractBuild<?, ?> build, BuildListener listener, HttpRequest... requests) {
         new GitLabCommitStatusPublisher("jenkins", false).prebuild(build, listener);
         mockServerClient.verify(requests);
     }
 
-    private void performAndVerify(AbstractBuild build, boolean markUnstableAsSuccess, HttpRequest... requests)
+    private void performAndVerify(AbstractBuild<?, ?> build, boolean markUnstableAsSuccess, HttpRequest... requests)
             throws InterruptedException, IOException {
         new GitLabCommitStatusPublisher("jenkins", markUnstableAsSuccess).perform(build, null, listener);
         mockServerClient.verify(requests);
@@ -267,27 +268,34 @@ public class GitLabCommitStatusPublisherTest {
     }
 
     private HttpRequest prepareUpdateCommitStatus(
-            final String apiLevel, String projectName, Run<?, ?> build, CommitBuildState state)
-            throws UnsupportedEncodingException {
+            final String apiLevel, String projectName, Run<?, ?> build, CommitBuildState state) {
         return request()
                 .withSecure(false)
-                .withPath("/gitlab/api/" + apiLevel + "/projects/" + URLEncoder.encode(projectName, "UTF-8")
+                .withPath("/gitlab/api/" + apiLevel + "/projects/" + URLEncoder.encode(projectName, StandardCharsets.UTF_8)
                         + "/statuses/" + SHA1)
                 .withMethod("POST")
                 .withKeepAlive(true)
                 .withHeader("PRIVATE-TOKEN", "secret")
                 .withHeader("Accept", "application/json")
-                .withHeader("User-Agent", "Jersey/2.39.1 (HttpUrlConnection 17.0.5)")
+                .withHeader("User-Agent", "Jersey/2.40 (HttpUrlConnection 11.0.17)")
                 .withHeader("Connection", "keep-alive")
                 .withHeader("Host", "localhost:" + mockServer.getPort())
                 .withHeader("Content-Length", "113")
                 .withHeader("Content-Type", "application/x-www-form-urlencoded")
-                .withBody("type " + ":" + " STRING")
-                .withBody(
-                        "c3RhdGU9c3VjY2VzcyZuYW1lPWplbmtpbnMmdGFyZ2V0X3VybD1odHRwJTNBJTJGJTJGbG9jYWxob3N0JTNBNTc3NjElMkZqZW5raW5zJTJGJTJGYnVpbGQlMkYxMjNkaXNwbGF5JTJGcmVkaXJlY3Q=") // type string
-                .withBody("state=" + URLEncoder.encode(state.name(), "UTF-8") + "&context=jenkins&" + "target_url="
-                        + URLEncoder.encode(DisplayURLProvider.get().getRunURL(build), "UTF-8"))
-                .withBody("Content-type " + ":" + " application/x-www-form-urlencoded");
+                .withBody(new StringBody("c3RhdGU9c3VjY2VzcyZuYW1lPWplbmtpbnMmdGFyZ2V0X3VybD1odHRwJTNBJTJGJTJGbG9jYWxob3N0JTNBNTc3NjElMkZqZW5raW5zJTJGJTJGYnVpbGQlMkYxMjNkaXNwbGF5JTJGcmVkaXJlY3Q=", new MediaType(
+                    "application",
+                    "x-www-form-urlencoded"
+                )));
+//                .withBody("state=" + URLEncoder.encode(state.name(), StandardCharsets.UTF_8) + "&context=jenkins&" + "target_url="
+//                    + URLEncoder.encode(DisplayURLProvider.get().getRunURL(build), StandardCharsets.UTF_8));
+
+//                        + URLEncoder.encode(DisplayURLProvider.get().getRunURL(build), StandardCharsets.UTF_8));
+//                .withBody("type " + ":" + " STRING")
+//                .withBody(
+//                        "c3RhdGU9c3VjY2VzcyZuYW1lPWplbmtpbnMmdGFyZ2V0X3VybD1odHRwJTNBJTJGJTJGbG9jYWxob3N0JTNBNTc3NjElMkZqZW5raW5zJTJGJTJGYnVpbGQlMkYxMjNkaXNwbGF5JTJGcmVkaXJlY3Q=") // type string
+//                .withBody("state=" + URLEncoder.encode(state.name(), "UTF-8") + "&context=jenkins&" + "target_url="
+//                        + URLEncoder.encode(DisplayURLProvider.get().getRunURL(build), StandardCharsets.UTF_8))
+//                .withBody("Content-type " + ":" + " application/x-www-form-urlencoded");
     }
 
     private HttpRequest prepareExistsCommitWithSuccessResponse(String apiLevel, String projectName)
@@ -297,30 +305,30 @@ public class GitLabCommitStatusPublisherTest {
         return existsCommit;
     }
 
-    private HttpRequest prepareExistsCommit(String apiLevel, String projectName) throws UnsupportedEncodingException {
+    private HttpRequest prepareExistsCommit(String apiLevel, String projectName) {
         return request()
                 .withSecure(false)
                 .withQueryStringParameter("per_page", "96")
-                .withPath("/gitlab/api/" + apiLevel + "/projects/" + URLEncoder.encode(projectName, "UTF-8")
+                .withPath("/gitlab/api/" + apiLevel + "/projects/" + URLEncoder.encode(projectName, StandardCharsets.UTF_8)
                         + "/repository/commits/" + SHA1)
-                .withMethod("GET")
+                .withMethod("POST")
                 .withKeepAlive(true)
                 .withHeader("Content-Length", "0")
                 .withHeader("PRIVATE-TOKEN", "secret")
                 .withHeader("Accept", "application/json")
-                .withHeader("User-Agent", "Jersey/2.39.1 (HttpUrlConnection 17.0.5)")
+                .withHeader("User-Agent", "Jersey/2.40 (HttpUrlConnection 11.0.17)")
                 .withHeader("Connection", "keep-alive")
                 .withHeader("Host", "localhost:" + mockServer.getPort());
     }
 
     private HttpRequest prepareGetProjectResponse(String projectName) throws IOException {
         HttpRequest request = request()
-                .withPath("/gitlab/api/v4/projects/" + URLEncoder.encode(projectName, "UTF-8"))
+                .withPath("/gitlab/api/v4/projects/" + URLEncoder.encode(projectName, StandardCharsets.UTF_8))
                 .withMethod("GET")
                 .withHeader("Content-Length", "0")
                 .withHeader("PRIVATE-TOKEN", "secret")
                 .withHeader("Accept", "application/json")
-                .withHeader("User-Agent", "Jersey/2.39.1 (HttpUrlConnection 17.0.5)")
+                .withHeader("User-Agent", "Jersey/2.40 (HttpUrlConnection 11.0.17)")
                 .withHeader("Connection", "keep-alive")
                 .withHeader("Host", "localhost:" + mockServer.getPort());
 
@@ -332,8 +340,8 @@ public class GitLabCommitStatusPublisherTest {
         return request;
     }
 
-    private AbstractBuild mockBuild(String gitLabConnection, Result result, String... remoteUrls) {
-        AbstractBuild build = mock(AbstractBuild.class);
+    private AbstractBuild<?, ?> mockBuild(String gitLabConnection, Result result, String... remoteUrls) {
+        AbstractBuild<?, ?> build = mock(AbstractBuild.class);
         List<BuildData> buildDatas = new ArrayList<>();
         BuildData buildData = mock(BuildData.class);
         Revision revision = mock(Revision.class);
@@ -369,8 +377,8 @@ public class GitLabCommitStatusPublisherTest {
         return build;
     }
 
-    private AbstractBuild mockBuildWithLibrary(String gitLabConnection, Result result, String... remoteUrls) {
-        AbstractBuild build = mock(AbstractBuild.class);
+    private AbstractBuild<?, ?> mockBuildWithLibrary(String gitLabConnection, Result result, String... remoteUrls) {
+        AbstractBuild<?, ?> build = mock(AbstractBuild.class);
         List<BuildData> buildDatas = new ArrayList<>();
         BuildData buildData = mock(BuildData.class);
         SCMRevisionAction scmRevisionAction = mock(SCMRevisionAction.class);
@@ -417,7 +425,7 @@ public class GitLabCommitStatusPublisherTest {
         EnvVars environment = mock(EnvVars.class);
         when(environment.expand(anyString())).thenAnswer(new Answer<String>() {
             @Override
-            public String answer(InvocationOnMock invocation) throws Throwable {
+            public String answer(InvocationOnMock invocation) {
                 return (String) invocation.getArguments()[0];
             }
         });
@@ -433,7 +441,7 @@ public class GitLabCommitStatusPublisherTest {
             throws IOException {
         String nameSpace = projectNameWithNamespace.split("/")[0];
         String projectName = projectNameWithNamespace.split("/")[1];
-        return IOUtils.toString(getClass().getResourceAsStream(name))
+        return IOUtils.toString(Objects.requireNonNull(getClass().getResourceAsStream(name)))
                 .replace("${projectId}", projectId + "")
                 .replace("${nameSpace}", nameSpace)
                 .replace("${projectName}", projectName);
